policy-graph/Generative_AI/v0.2/GA.root.md
---
id: GA.root
version: Generative_AI.v0.1
title: Generative AI Image Classification
area: Generative_AI
node_type: root
parent: null
polarity: mixed
status: draft
coverage_weight: 1.0
coverage_target:
  easy_positive: 20
  hard_positive: 20
  easy_negative: 20
  hard_negative: 20
  platinum_min: 5
source_anchors:
  - RUSH user brief 2026-05-09 - cold-start GenAI classification
  - RUSH holdout review 2026-05-11 - photorealistic wildlife and nature positives overcalled as authentic
edges:
  - {type: clarifies, to: GA.boundary.low_quality_uncertain}
canonical_examples: []
---
# Generative AI Image Classification

## Decision rule
Classify an image as `gen_ai` when visible evidence, provenance evidence, or a combination of cues makes it more likely than not that the image is fully or materially generated by a generative model under the current policy version.

Classify as `not_gen_ai` when the evidence better supports an authentic photograph, conventional edit, CGI/game render, benign illustration, compression artifact, or insufficient-evidence routing.

Plausible camera-like features such as shallow depth of field, golden-hour lighting, telephoto bokeh, high resolution, sensor-like noise, or coherent overall composition do **not** by themselves rule out `gen_ai`. They support `not_gen_ai` only after the reviewer has checked for specific positive cues.

## Required review order
1. Check explicit provenance or disclosure.
2. Check positive visual nodes, including anatomy, eyes, text/symbols, repeated details, surface texture, scene geometry/reflections, and nature/wildlife synthesis artifacts.
3. Only then assign authentic-photo, conventional-edit, CGI/game-render, compression, or low-quality boundary nodes.

## Label hierarchy
- `gen_ai`
  - [[GA.visual_artifacts.anatomy.hands|anatomical hand, limb, paw, and digit artifacts]]
  - [[GA.visual_artifacts.eyes|eye and gaze artifacts]]
  - [[GA.visual_artifacts.text_symbols|garbled text and symbols]]
  - [[GA.visual_artifacts.repeated_details|repeated or cloned detail artifacts]]
  - [[GA.visual_artifacts.nature_wildlife|photorealistic nature, wildlife, and landscape synthesis artifacts]]
  - [[GA.surface_texture.plastic_skin|synthetic surface, fur, and plastic-skin texture]]
  - [[GA.scene_geometry.inconsistent_perspective|scene geometry and reflection inconsistency]]
  - [[GA.provenance.synthetic_disclosure|explicit synthetic provenance]]
- `not_gen_ai`
  - [[GA.negative.authentic_photo|authentic photograph]]
  - [[GA.boundary.photo_editing|conventional photo editing / filters]]
  - [[GA.boundary.cgi_game_render|CGI, game, and 3D renders]]
  - [[GA.exception.compression_artifacts|compression and encoding artifacts]]
  - [[GA.boundary.low_quality_uncertain|low-quality uncertain cases]]

## Cold-start stance
This v0.1 graph is intentionally conservative. It should create useful places to attach examples, justifications, and SME corrections; it is not final policy law from Mount Olympus.
